# process-icon2i-hub

./: .gitignore  pyproject.toml
lambda/: lambda_function.py
src/process_icon2i_hub/: __init__.py  main.py
src/process_icon2i_hub/icon_2i/: __init__.py  _consts.py  icon_2i_ingestor.py  icon_2i_ingestor_processor.py  icon_2i_retriever.py  icon_2i_retriever_processor.py
src/process_icon2i_hub/utils/: filesystem.py  module_s3.py
tests/: test_xyz.py
