[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-icon2i-hub"
version = "1.0.32"
description = "Scripts to get data from DPC API"
readme = ""
authors = [
  { name="Tommaso Redaelli", email="tommaso.redaelli@gecosistema.com" }
]
license = { text = "MIT" }
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "python-dotenv",
  "requests",
  "filelock",
  "click",
  "boto3",
  "pygrib",
  "xarray",
  "rioxarray",
  "netcdf4",
  "geopandas"
]

[project.optional-dependencies]
py311gdal = [
  "gdal @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2025.1.20/GDAL-3.10.1-cp311-cp311-win_amd64.whl",
]
pygeoapi = [
  "numpy",
  "numba",
  "gdal2numpy",
  "pygeoapi",
]

[project.urls]
Homepage = "https://github.com/SaferPlaces2023/process-icon2i-hub"

[project.scripts]
icon2i-ingestor = "process_icon2i_hub.main:cli_run_icon2i_ingestor"
icon2i-retriever = "process_icon2i_hub.main:cli_run_icon2i_retriever"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
